--- a/practice/index.html
+++ b/practice/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=swap" rel="stylesheet" />
     <title>It studio</title>
   </head>
 
@@ -24,7 +27,7 @@
       <section>
         <h1>Передовая IT студия</h1>
         <p>Мы создаем легкие решения сложных задач и проблем</p>
-        <a href="">Наши проекты</a>
+        <a href="#projects">Наши проекты</a>
       </section>
       <section>
         <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
@@ -80,31 +83,169 @@
           </li>
         </ul>
       </section>
+
       <section>
         <h2>Наши работы, на которых мы специализируемся</h2>
-      </section>
-      <section>
-        <h2>Наши проекты</h2>
+        <button type="button">Все услуги</button>
         <ul>
-          <p>
-            Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
-            "рыбой" для текстов на латинице с начала XVI века.
-          </p>
           <li>
-            <button type="button">Все проекты</button>
+            <img src="./images/img2.png" width="350" alt="человек за ноутбуком" />
+            <h3>Исследование и упаковка</h3>
+            <p>
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
+              стандартной "рыбой" для текстов на латинице с начала XVI века.
+            </p>
+            <a href="">Подробнее</a>
           </li>
         </ul>
         <ul>
-          <li></li>
+          <li>
+            <img src="./images/img2.png" width="350" alt="человек за ноутбуком" />
+            <h3>Исследование и упаковка</h3>
+            <p>
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
+              стандартной "рыбой" для текстов на латинице с начала XVI века.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
         </ul>
         <ul>
-          <li></li>
+          <li>
+            <img src="./images/img2.png" width="350" alt="человек за ноутбуком" />
+            <h3>Исследование и упаковка</h3>
+            <p>
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
+              стандартной "рыбой" для текстов на латинице с начала XVI века.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
         </ul>
+      </section>
+      <section id="projects">
+        <h2>Наши проекты</h2>
+        <p>
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.
+        </p>
         <ul>
-          <li></li>
+          <li>
+            <a href=""><img src="./images/img3.png" alt="код" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/img3.png" alt="код" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/img3.png" alt="код" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/img3.png" alt="код" /></a>
+          </li>
         </ul>
         <button type="button">Все проекты</button>
       </section>
+
+      <section>
+        <h2>Видео о нашей работе</h2>
+        <p>Просто посмотрите, как мы работаем</p>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/osIs2J6iGaU"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <section>
+        <b>Подпишитесь на нашу рассылку</b>
+        <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+        <form action="">
+          <input type="email" placeholder="Ваш e-mail" />
+          <button type="submit">Подписаться</button>
+        </form>
+        <p>Мы не шлем спам, и передаем никому ваши данные.</p>
+      </section>
     </main>
+    <footer>
+      <ul>
+        <li>
+          <b> Контактна інформація </b>
+          <address>
+            <ul>
+              <li>
+                <a href="mailto:test@test.ru">test@test.ru</a>
+              </li>
+              <li>
+                <a href="tel:+87775556699">+8 777 555 66 99</a>
+              </li>
+              <li>
+                <a href="https://goo.gl/maps/FcMreZr4DVAMYs3x5" rel="noopener noreferrer nofollow" target="_blank"
+                  >Москва, Бульвар Ленина 33</a
+                >
+              </li>
+            </ul>
+          </address>
+        </li>
+
+        <li>
+          <b> Основные ссылки </b>
+          <nav>
+            <ul>
+              <li>
+                <a href="#">Главная</a>
+              </li>
+              <li>
+                <a href="#">Наши проекты</a>
+              </li>
+              <li>
+                <a href="#">Наши услуги</a>
+              </li>
+              <li>
+                <a href="#">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+        </li>
+
+        <li>
+          <b> Наши проекты </b>
+          <ul>
+            <li>
+              <a href="#">РосНано</a>
+            </li>
+            <li>
+              <a href="#">Сколково</a>
+            </li>
+            <li>
+              <a href="#">Проект “Восток”</a>
+            </li>
+            <li>
+              <a href="#">ТЭЦ Калининграда</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <b> Социальные сети </b>
+          <ul>
+            <li>
+              <a href="#">VK.com</a>
+            </li>
+            <li>
+              <a href="#">Instagram</a>
+            </li>
+            <li>
+              <a href="#">Facebook</a>
+            </li>
+            <li>
+              <a href="#">Twitter</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <p>&#169;2019. Все права защищены.</p>
+    </footer>
   </body>
 </html>
